<resources>
    <string name="app_name">MontyHall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">The Monty Hall Problem</string>
    <string name="new_text">New</string>
    <string name="continue_text">Continue</string>
    <string name="about_text">About</string>
    <string name="about">
        This is St. Lawrence University CS450
        Implementation of the Monty Hall Game.
    </string>
    <string name="about_title_text">About the Monty Hall Problem</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_a_door">Choose a Door</string>
    <string name="wins">Wins</string>
    <string name="loss">Loss</string>
    <string name="total">Total</string>
    <string name="win_score">0</string>
    <string name="loss_score">0</string>
    <string name="total_score">0</string>
    <string name="win_percent">0.0</string>
    <string name="loss_percent">0.0</string>
    <string name="total_percent">1.0</string>
    <string name="switch_door">Do you want to switch doors?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
