<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            //Column1:Text

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/wins"
                android:textSize="25sp"/>

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/loss"
                android:textSize="25sp"/>

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/total"
                android:textSize="25sp"/>

            //Column2:Score

            <TextView
                android:id="@+id/loss_score"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="30dp"
                android:text="@string/win_score"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/win_score"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:text="@string/loss_score"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/total_score"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:text="@string/total_score"
                android:textSize="25sp"/>

            //Column3:Percentages

            <TextView
                android:id="@+id/win_percent"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="30dp"
                android:text="@string/win_percent"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/loss_percent"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:text="@string/loss_percent"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/total_percent"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:text="@string/total_percent"
                android:textSize="25sp"/>

        </GridLayout>

        // "Choose a Door" Text
        <TextView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="70dp"
            android:text="@string/choose_a_door"
            android:textSize="30sp" />

        // Door Layout
        <include
            layout="@layout/doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</FrameLayout>